--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-/* Margin/Padding notation : Top, Right, Bottom, Left */
+/************************************************
+*---------------- GLOBAL STYLES ----------------*
+************************************************/
 
 html, body {
     font-family: 'Cambria';
@@ -23,7 +25,9 @@ hr {
     border-style: groove;
 }
 
-/**********************************************/
+/************************************************
+*--------------- HEADER / FOOTER ---------------*
+************************************************/
 
 header p {
     font-size: 2.5vh;
@@ -73,13 +77,24 @@ footer a {
     color: #B7BD9B;
 }
 
-/**********************************************/
+/************************************************
+*------------------- CONTENT -------------------*
+************************************************/
 
-#result {
+#canvas {
     background-color: #191919;
     border-color: #282828;
     border-style: solid;
     border-width: 1px;
+}
+
+#controls {
+    width: 60vh;
+    margin: auto;
+}
+
+.right, form {
+    font-family: 'Open Sans Light';
 }
 
 input:focus {
@@ -90,27 +105,28 @@ input[type=radio] {
     height: 1.45vh;
 }
 
-input[type=range] {
-    -webkit-appearance: none;
-    -moz-apperance: none;
+.right { float: right; }
+.left { float: left; }
+.row { display: flex; }
+.column { flex: 50%; }
+
+/************************************************
+*------------------- SLIDERS -------------------*
+************************************************/
+
+.sliderStyle {
     border-radius: 5px;
-    height: 3vh;
+    height: 2.5vh;
     width: 90%;
+    margin-top: 0.75vh;
+    margin-bottom: 0.75vh;
     padding-left: 5%;
     padding-right: 5%;
 }
 
-input[type=range]::-webkit-slider-thumb {
-    -webkit-appearance: none !important;
-    background-color: #E9E9E9;
-    border: 1px solid #CECECE;
-    height: 3.5vh;
-    width: 10px;
-}
-
-#vapeColorSlider {
+#vapeColorSliderStyle {
     /* In order: gold, cyan, grey, white, black, red, orange, blue, burgundy */
-    background-image: linear-gradient(to right,
+    background: linear-gradient(to right,
         #FBE5D2 00%, #FBE5D2 11%,
         #55FEF2 11%, #55FEF2 22%,
         #7D7D7D 22%, #7D7D7D 33%,
@@ -122,9 +138,9 @@ input[type=range]::-webkit-slider-thumb {
         #BA3237 88%, #BA3237 99%);
 }
 
-#woodColorSlider {
+#woodColorSliderStyle {
     /* In order: none, sun yellow, azo orange, permanent cyan, permanent violet blue, permanent green, marine blue, sap green, oxide black */
-    background-image: linear-gradient(to right,
+    background: linear-gradient(to right,
         #FFFFFF 00%, #FFFFFF 11%,
         #F6C93A 11%, #F6C93A 22%,
         #F68A2E 22%, #F68A2E 33%,
@@ -136,31 +152,63 @@ input[type=range]::-webkit-slider-thumb {
         #353535 88%, #353535 99%);
 }
 
-#controls {
-    width: 60vh;
-    margin: auto;
+input[type=range] {
+    -webkit-appearance: none;
+    background: transparent;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    cursor: pointer;
 }
 
-form {
-    font-family: 'Open Sans Light';
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    background-color: #E9E9E9;
+    border: 1px solid #CECECE;
+    height: 3.5vh;
+    width: 10px;
 }
 
-.displayedValues label {
-    font-family: 'Open Sans Light';
+input[type=range]::-moz-range-track {
+    -webkit-appearance: none;
+    background: transparent;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    cursor: pointer;
 }
 
-.right {
-    float: right;
+input[type=range]::-moz-range-thumb {
+    -webkit-appearance: none;
+    background-color: #E9E9E9;
+    border: 1px solid #CECECE;
+    height: 3.5vh;
+    width: 10px;
 }
 
-.left {
-    float: left;
+input[type=range]::-moz-focus-outer {
+    border: none;
 }
 
-.row {
-    display: flex;
+input[type=range]::-ms-fill-lower {
+    background: transparent;
+    border: none;
 }
 
-.column {
-    flex: 50%;
+input[type=range]::-ms-fill-upper {
+    background: transparent;
+    border: none;
+}
+
+input[type=range]::-ms-track {
+    background: transparent;
+    color: transparent;
+    border: none;
+    width: 100%;
+    cursor: pointer;
+}
+
+input[type=range]::-ms-thumb {
+    background: transparent;
+    border: none;
 }
