Improved blue vape color

--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ input[type=radio] {
         #212322 44%, #212322 55%,
         #FD564E 55%, #FD564E 66%,
         #FCA53D 66%, #FCA53D 77%,
-        #83ABFC 77%, #83ABFC 88%,
+        #0E5DEF 77%, #0E5DEF 88%,
         #BA3237 88%, #BA3237 99%);
 }
 
